Update Kafka post

--- a/_posts/2020-05-18-kafka.md
+++ b/_posts/2020-05-18-kafka.md
@@ -3,16 +3,34 @@ layout: post
 title: /Notes/ Kafka
 ---
 
+_Research into Kafka_
 
 - Kafka helps us handle the continuous flow of data.
 - Kafka is oriented around the idea of treating data as a continually evolving and ever-growing stream.
-- Think of it as a streaming platform: a system that lets you publish and subscribe to streams of data, store them, and process them
+- Think of it as a distributed streaming platform: a system that lets you publish and subscribe to streams of data, store them, and process them
 - The low latency nature of Kafka makes it applicable for the kind of core apps that directly power a business. Events in a business are happening all the time and the ability to react to them as they occur makes it much easier to build services that directly power the operation of the business, feed back into customer experiences, and so on.
-- Similar to a messaging system in that it lets you publish (send) and subscribe to (receive) streams of messages (data)
+- Similar to a messaging system in that it lets you publish (send) and subscribe to (receive) streams of data (messages)
     - Differences tho:
         1. It works as a modern distributed system that runs as a cluster and can scale via a central platform
         1. It's a true storage system built to store data for as long as you need
         1. Has a higher level of abstraction; while messaging systems just hand out messages, Kafka's stream processing capabilities let you compute derived streams and datasets dynamically off of your streams, with far less code
+
+**Kafka parts**  
+<ins>Messages and Batches:</ins>
+    - A message is an array of bytes to Kafka, so its data does not have a specific meaning or format to Kafka
+    - Messages can have keys (optional bits of metadata); keys are used when messages need to be written to partitions in a more controlled manner
+    - Messages are written into Kafka in batches
+        - a batch is a collection of messages, all of which are being produced to the same topic and partition
+<ins>Schemas:</ins>
+    - It's recommended that additional structure be imposed on the message content so it can be easily understood. JSON and XML are more simplistic systems, but many devs favor Apache Avro (serialization framework)
+    - Consistent data format is important for true decoupling of reading and writing messages
+<ins>Topics and Partitions:</ins>
+    - Messages are categorized into topics
+<ins>Producers and Consumers:</ins>
+
+
+
+
 
 [See a sketch of how publisher/subscriber systems work](https://excalidraw.com/#json=5152003063808000,TkiXjCU4Ng3qRkOmOa0o7Q)
 
