Update Kafka notes

--- a/_posts/2020-05-18-kafka.md
+++ b/_posts/2020-05-18-kafka.md
@@ -74,10 +74,28 @@ _Research into Kafka_
 - Rentention is the durable storage of messages for some period of time. 
 - Brokers are configured with default retention settings for topics, and individual topics can be configured with their own retention settings
 
+<ins>Writing producers:</ins>
 
+- Start producing messages Kafka by creating a `ProducerRecord`, which must include the topic we want to send the record to and a value.
+    - Can also optionally specify a key and/or partition
+- Once we send the `ProducerRecord`, the first thing the producer does is serialize the key and value objects so they can be sent over the network
+- Next, the data is sent to a partitioner.
+    - If we specified a partition in the `ProducerRecord`, the partitioner doesn't do anything except returns the partition we specified
+    - If we didn't specify, the partitioner will choose a partition for us, then return that partition to us
+    - Once a partition is selected, the producer knows which topic and partition the record will go to
+    - Then the producer adds that record to the batch of records also going to that same topic and partition.
+    - Batches are sent to Kafka
+- Next, the broker receives the messages and sends back a response.
+    - If the messages were succesfully written to Kafka, broker returns a `RecordMetadata` object with the topic, partition, and offset of the record within the partition.
+    - If the broker failed to write the messages, it will return an error.
+        - When the producer receives the error, it may retry sending the message a few more times before giving up and returning its own error
 
 
 
 [See a sketch of how publisher/subscriber systems work](https://excalidraw.com/#json=5152003063808000,TkiXjCU4Ng3qRkOmOa0o7Q)
 
 [Resource](https://www.confluent.io/resources/kafka-the-definitive-guide/)
+
+[Resource](https://confluent.buzzsprout.com/186154/3545173-kubernetes-meets-apache-kafka-ft-kelsey-hightower)
+
+ 
