Update Kafka notes

--- a/_posts/2020-05-18-kafka.md
+++ b/_posts/2020-05-18-kafka.md
@@ -74,6 +74,7 @@ _Research into Kafka_
 - Rentention is the durable storage of messages for some period of time. 
 - Brokers are configured with default retention settings for topics, and individual topics can be configured with their own retention settings
 
+**How to**  
 <ins>Writing producers:</ins>
 
 - Start producing messages Kafka by creating a `ProducerRecord`, which must include the topic we want to send the record to and a value.
@@ -94,8 +95,11 @@ _Research into Kafka_
 
 [See a sketch of how publisher/subscriber systems work](https://excalidraw.com/#json=5152003063808000,TkiXjCU4Ng3qRkOmOa0o7Q)
 
-[Resource](https://www.confluent.io/resources/kafka-the-definitive-guide/)
+[Quick fun tutorial here](https://kafka.apache.org/quickstart)
 
-[Resource](https://confluent.buzzsprout.com/186154/3545173-kubernetes-meets-apache-kafka-ft-kelsey-hightower)
+[Resource: Kafka, The Definitive Guide](https://www.confluent.io/resources/kafka-the-definitive-guide/)
+
+[Resource: Confluent podcast w/ Kelsey Hightower](https://confluent.buzzsprout.com/186154/3545173-kubernetes-meets-apache-kafka-ft-kelsey-hightower)
+
 
  
