Update kakfa notes

--- a/_posts/2020-05-18-kafka.md
+++ b/_posts/2020-05-18-kafka.md
@@ -4,16 +4,13 @@ title: /Notes/ Kafka
 ---
 
 _Research into Kafka_
-
-- Kafka helps us handle the continuous flow of data.
-- Kafka is oriented around the idea of treating data as a continually evolving and ever-growing stream.
-- Think of it as a distributed streaming platform: a system that lets you publish and subscribe to streams of data, store them, and process them
-- The low latency nature of Kafka makes it applicable for the kind of core apps that directly power a business. Events in a business are happening all the time and the ability to react to them as they occur makes it much easier to build services that directly power the operation of the business, feed back into customer experiences, and so on.
-- Similar to a messaging system in that it lets you publish (send) and subscribe to (receive) streams of data (messages)
-    - Differences tho:
-        1. It works as a modern distributed system that runs as a cluster and can scale via a central platform
-        1. It's a true storage system built to store data for as long as you need
-        1. Has a higher level of abstraction; while messaging systems just hand out messages, Kafka's stream processing capabilities let you compute derived streams and datasets dynamically off of your streams, with far less code
+**Kafka basics**  
+- An instance of Kafka acts as a message broker.
+- Kafka clients are producers and consumers.
+- The producer sends messages to the broker, and the consumer reads messages from the broker.
+- Producers send messages categorized by `topic`
+- The broker stores those messages under that topic in `partitions` - partitions are how Kafka provides redundancy
+    - Say the topic has 4 partitions. When messages are sent to the broker, the broker appends the messages to the end of the messages already in the partition(s)
 
 **Kafka parts**  
 <ins>Messages and Batches:</ins>
